2011-04-12  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=58131

        Provide a workaround for an obscure Studio 12 compiler bug, which
        couldn't call src->~T() on a const T *src.

        * wtf/Vector.h:

Canonical link: https://commits.webkit.org/73461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83704 268f45cc-cd09-0410-ab3c-d52691b4dbfc